Improve display on smaller screens, fix spacing at footer

--- a/public_html/wp-content/themes/pattern-directory/css/components/_pattern-grid.scss
+++ b/public_html/wp-content/themes/pattern-directory/css/components/_pattern-grid.scss
@@ -1,15 +1,12 @@
 .pattern-grid {
+	display: grid;
+	margin: 1.5rem 1.5rem 4rem;
 	max-width: 960px;
-	margin: 1.5rem;
+	grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+	gap: 1.5rem;
 
-	@include breakpoint( $breakpoint-small ) {
-		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
-		gap: 1.5rem;
-
-		> * {
-			align-self: baseline;
-		}
+	> * {
+		align-self: baseline;
 	}
 
 	@include breakpoint( $breakpoint-large ) {
